KP-3631 Design filtering functionality: fixed shift, removed outline
Former-commit-id: 4f7f86dbe1462659c69fb16fa89908d4c223d05e

--- a/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-designer-editor.css.less
+++ b/src/UI/Designer/WB.UI.Designer/UpdatedDesigner/content/designer-editor/wb-designer-editor.css.less
@@ -176,6 +176,7 @@
               .arial-font();
               font-size: 16px;
               color: #000;
+              outline: none;
             }
             > span {
               height: @h;
@@ -183,6 +184,7 @@
               border-radius: 0 3px 3px 0;
               background-color: #fff;
               cursor: pointer;
+              top: 0;
             }
           }
           > button {
